# CMakeStarterProject

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Empty.cpp  Empty.h
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/unit/: CMakeLists.txt  starterTests.cpp
